added class,h1,form,button, input,display.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="weather-app">
+        <h1>Weather App</h1>
+        <form id="weather-form">
+            <input type="text" id="city-input" placeholder="Enter city name" required>
+            <button type="submit">Get Weather</button>
+        </form>
+        <div id="weather-display">
+           <!--weather information will appear here-->
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
